# shellous

./: .cirrus.yml  .cspell.json  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  search.js  search.json  shellous.html
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  docs.yml  publish.yml  scorecards.yml  spellcheck.yml
ci/: annotate.awk  requirements-dev.txt  requirements-uvloop.txt  requirements.txt  update-github-actions.sh  update-requirements.sh
ci/custom-template/: module.html.jinja2
docs/: commands.md  multiple_capture.md  redirection.md  results.md
shellous/: __init__.py  command.html  command.py  harvest.html  harvest.py  log.html  log.py  pipeline.html  pipeline.py  prompt.py  pty_util.html  pty_util.py  redirect.html  redirect.py  result.html  result.py  runner.html  runner.py  tty.html  tty.py  util.html  util.py  watcher.html  watcher.py
tests/: conftest.py  python_script.py  test_args.py  test_audit.py  test_bug.py  test_command.py  test_harvest.py  test_log.py  test_pipeline.py  test_prompt.py  test_pytest.py  test_readme.py  test_redirects.py  test_result.py  test_shellous.py  test_typing.py  test_util.py
tests/prompt/: example1.py  example2.py  example3.py  fake_prompter.sh  test_examples.py
tests/unix/: test_readme.py  test_shellous.py  test_threads.py  test_unix.py
tests/win32/: test_win32.py
tests/windows/: test_win32.py
