[tool.poetry]
name = "shellous"
version = "0.32.0"
description = "Async Processes and Pipelines"
license = "Apache-2.0"
authors = ["Bill Fisher <william.w.fisher@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/byllyfish/shellous"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
]

[tool.poetry.urls]
"Release Notes" = "https://github.com/byllyfish/shellous/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/byllyfish/shellous/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
asyncstdlib = "^3.10.9"
black = "^23.11.0"
coverage = "^7.3.2"
pdoc = "^14.1.0"
pylint = "^3.0.2"
pyright = "^1.1.336"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.2.0"
ruff = {version = "^0.1.6", markers = "sys_platform == 'darwin' or sys_platform == 'linux' or sys_platform == 'win32'"}
typing-extensions = "^4.8.0"

[tool.poetry.group.uvloop]
optional = true

[tool.poetry.group.uvloop.dependencies]
uvloop = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  'ignore:.*(ChildWatcher|get_child_watcher|set_child_watcher|deprecated and will be removed in Python 3.14):DeprecationWarning',  # 3.12
]
env_files = ["tests/tests.env"]
addopts = '--timeout=20 --color=yes --log-cli-format="%(created).03f %(levelname)s %(name)s %(message)s" --log-level=INFO --log-file-format="%(created).03f %(levelname)s %(name)s %(message)s"'
asyncio_mode = "auto"

[tool.pylint.classes]
exclude-protected = ["_proc", "_transport", "_returncode", "_writable", "_return_result", "_catch_cancelled_error", "_start_new_session", "_preexec_fn"]

[tool.pylint.format]
extension-pkg-allow-list = ["termios,fcntl"]

[tool.pylint.typecheck]
max-module-lines = 1500

[tool.pylint.design]
max-args = 7
max-attributes = 12
min-public-methods = 1
max-branches = 15

[tool.pyright]
pythonPlatform = "All"
strict = [
  "shellous/*.py",
]

# Enable other pyright checks, not enabled by `strict`.
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults

reportCallInDefaultInitializer = true
# reportImplicitOverride = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
# reportUnusedCallResult = true

[tool.black]
required-version = "23.11.0"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "D202", "RET", "RUF", "W"]
ignore = [
  "D300",   # Use triple double quotes `"""`
  "S101",   # Use of `assert` detected
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "UP007",  # Use `X | Y` for type annotations
]
line-length = 120
