[project]
name = "shellous"
version = "0.40.0"
description = "Async Processes and Pipelines"
authors = [{ name = "Bill Fisher", email = "william.w.fisher@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/byllyfish/shellous"
"Release Notes" = "https://github.com/byllyfish/shellous/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/byllyfish/shellous/issues"

[dependency-groups]
dev = [
    "asyncstdlib>=3.14.0,<4",
    "black==26.5.1",
    "coverage>=7.13.5,<8",
    "pdoc>=16.0.0,<17",
    "pylint>=4.0.5,<5",
    "pyright>=1.1.408,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-randomly>=4.0.1,<5",
    "pytest-timeout>=2.4.0,<3",
    "ruff>=0.15.11,<0.16 ; sys_platform == 'darwin' or sys_platform == 'linux' or sys_platform == 'win32'",
    "typing-extensions>=4.15.0,<5",
]
uvloop = ["uvloop>=0.22.1,<0.23"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
#filterwarnings = [
#  "error",
#  'ignore:.*(ChildWatcher|get_child_watcher|set_child_watcher):DeprecationWarning',
#]
env_files = ["tests/tests.env"]
addopts = '--timeout=30 --color=yes --log-cli-format="%(created).03f %(levelname)s %(name)s %(message)s" --log-level=INFO --log-file-format="%(created).03f %(levelname)s %(name)s %(message)s"'
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_debug = true

[tool.pylint.classes]
exclude-protected = ["_proc", "_transport", "_returncode", "_writable", "_return_result", "_catch_cancelled_error", "_start_new_session", "_preexec_fn"]

[tool.pylint.format]
extension-pkg-allow-list = ["termios,fcntl"]

[tool.pylint.typecheck]
max-module-lines = 1500

[tool.pylint.design]
max-args = 7
max-attributes = 12
min-public-methods = 1
max-branches = 15

[tool.pyright]
pythonPlatform = "All"
strict = [
  "shellous/*.py",
]

# Enable other pyright checks, not enabled by `strict`.
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults

reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true

[tool.black]
required-version = "26.5.1"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D202", "RET", "RUF", "W"]
ignore = [
  "D300",   # Use triple double quotes `"""`
  "S101",   # Use of `assert` detected
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "UP007",  # Use `X | Y` for type annotations
  "RUF022", # `__all__` is not sorted
]

[tool.pyrefly]
python-platform = "linux"
infer-with-first-use = false

[tool.pyrefly.errors]
implicitly-defined-attribute = "error"
